--- a/OURSERVICES.en.html
+++ b/OURSERVICES.en.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html SYSTEM "about:legacy-compat"><html lang="en" class="wf-opensans-n4-active wf-opensans-n7-active wf-ubuntu-n4-active wf-ubuntu-n7-active wf-varelaround-n4-active wf-active"><head id="head">
-<base href="https://www.cuttingedgepsychiatry.com/OURSERVICES.en.html">
+<!-- <base href="https://www.cuttingedgepsychiatry.com/OURSERVICES.en.html"> -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   
