--- a/SALIVAURINEBLOODSAMPLETESTING.en.html
+++ b/SALIVAURINEBLOODSAMPLETESTING.en.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html SYSTEM "about:legacy-compat"><html lang="en" class="wf-opensans-n4-active wf-opensans-n7-active wf-ubuntu-n4-active wf-ubuntu-n7-active wf-varelaround-n4-active wf-active"><head id="head">
-<base href="https://www.cuttingedgepsychiatry.com/SALIVAURINEBLOODSAMPLETESTING.en.html">
+<!-- <base href="https://www.cuttingedgepsychiatry.com/SALIVAURINEBLOODSAMPLETESTING.en.html"> -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+ 
   
 <meta name="x-therapysites-template" value=" ">
 
